--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
             <div class="row top-buffer shadow">
                 <div class="row">
                   <div class="col-md-10"> <h2> Step 1: Artists </h2> </div>
-                  <div class="col-md-2"><a data-toggle="modal" href="#HelpModal" class="btn btn-info btn-block button_back">Help</a></div>
+                  <div class="col-md-2"><a data-toggle="modal" href="#HelpModal" class="btn btn-info btn-block button_back" id="searchhelp">Help</a></div>
                 </div>
                 <div class="description-settings">
                   Your playlist will be generated using songs from artists of your choice. <br>
@@ -67,7 +67,7 @@
             <div class="row top-buffer shadow">
               <div class="row">
                 <div class="col-md-10"> <h2> Step 2: Graph </h2> </div>
-                <div class="col-md-2"> <button type="button" id="back-to-settings" class="btn btn-primary button_back"> Back to Artists </button> </div>
+                <div class="col-md-2"> <button type="button" id="back-to-settings" class="btn btn-primary button_back"><span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>  Back to Artists </button> </div>
               </div>
               <div class="row">
                 <div class="description-graph col-md-8">
@@ -103,7 +103,7 @@
           <div class="testtable row top-buffer shadow">
             <div class="row">
               <div class="col-md-10"> <h2> PLAYLIST: Ready! </h2> </div>
-              <div class="col-md-2"> <button type="button" id="back-to-graph" class="btn btn-primary button_back"> Back to Graph </button> </div>
+              <div class="col-md-2"> <button type="button" id="back-to-graph" class="btn btn-primary button_back"> <span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>  Back to Graph </button> </div>
             </div>
             <div id="player" style="padding-right: 0px;">
             </div>
