--- a/web/index.html
+++ b/web/index.html
@@ -31,9 +31,12 @@
         <div class="container" id ="setting-page">
             <div class="row top-buffer shadow">
                 <div class="row">
-                  <div class="col-md-10"> <h2> Step 1: Artists </h2> </div>
-                  <div class="col-md-2"><a data-toggle="modal" href="#HelpModal" class="btn btn-info btn-block button_back">Help</a></div>
-                </div>
+									<div class="col-md-6"> <h2> Step 1: Artists </h2> </div>
+									<div class="col-md-6">
+										<a data-toggle="modal" href="#HelpModal" class="btn btn-info button_back pull-right">Help</a>   
+										<button type="button" id="retrieve-playlist" class="btn button_back pull-right"> Retrieve Saved Playlist </button> 
+									</div>
+								</div>
                 <div class="description-settings">
                   Your playlist will be generated using songs from artists of your choice. <br>
                   Search and add several artists below! <br>
@@ -102,8 +105,13 @@
         <div class="container" id="playlist-page">
           <div class="testtable row top-buffer shadow">
             <div class="row">
-              <div class="col-md-10"> <h2> PLAYLIST: Ready! </h2> </div>
-              <div class="col-md-2"> <button type="button" id="back-to-graph" class="btn btn-primary button_back"> Back to Graph </button> </div>
+              <div class="col-md-6"> <h2> PLAYLIST: Ready! </h2> </div>
+              <div class="col-md-6"> 
+								<button type="button" id="back-to-graph" class="btn btn-primary button_back pull-right"> Back to Graph </button> 
+								<div>
+								<button type="button" id="save-playlist" class="btn button_back pull-right"> Save Playlist </button> 
+								</div>
+							</div>
             </div>
             <div id="player" style="padding-right: 0px;">
             </div>
