Disabling buttons and tooltips

--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,9 @@
                     <ul class="list-group" id="search-artists">
                       <li class='list-group-item'> No artists yet... </li>
                     </ul>
-                    <button type="button" id="searchsubmit" class="btn btn-primary btn-lg btn-block">Submit</button></div>
+                    <div class="tooltip-wrapper mybtn" data-toggle="tooltip" data-placement="bottom" title="Query cannot be empty or redundent">
+                      <button type="button" id="searchsubmit" class="btn btn-primary btn-lg btn-block">Submit</button></div>
+                    </div>   
                   </div>
                 </div>
                 </div>
