--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+		<meta charset="utf-8">
     <title>BarbieChad</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +21,7 @@
 
 <body class='spotifyblack_background white_text'>
     <div class="container top-buffer">
-        <div class="row">
+        <div class="row" id="headerimg" style="cursor: pointer">
         <div class="col-md-12 text-center">
             <img src="img/header3.png" class="img-responsive center">
         </div>
@@ -34,7 +35,8 @@
 									<div class="col-md-6"> <h2> Step 1: Artists </h2> </div>
 									<div class="col-md-6">
 										<a data-toggle="modal" href="#HelpModal" class="btn btn-info button_back pull-right" id="searchhelp">Help</a>   
-										<button type="button" id="retrieve-playlist" class="btn button_back pull-right"> Retrieve Saved Playlist </button> 
+								<div id="retrieve-div" class="button_back">
+								</div>
 									</div>
 								</div>
                 <div class="description-settings">
@@ -113,8 +115,8 @@
 									<span class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>  
 									Back to Graph 
 								</button>
-								<div>
-								<button type="button" id="save-playlist" class="btn button_back pull-right"> Save Playlist </button> 
+								<div id="playlist-div" class="button_back">
+								<button type="button" id="save-playlist" class="btn pull-right"> Save Playlist </button> 
 								</div>
 							</div>
             </div>
